[package]
name = "rust"
version = "0.1.0"
authors = ["bluesky711711 <blueky711711@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "example"

[dependencies]
calamine = "0.16.1"

[build-dependencies]
cbindgen = "0.14.2"